# autotrain-yolo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  WORKFLOW.md  program.md  pyproject.toml  training-plan.md  yolo-project.example.yaml
.claude/: settings.json  settings.local.json
.claude/agents/: experiment-runner.md  results-analyzer.md
.claude/hooks/: pre_experiment_guard.py
.claude/prompts/: full-audit.md
.claude/skills/active-learning/: SKILL.md
.claude/skills/analyze-results/: SKILL.md
.claude/skills/analyze-results/resources/: metrics-guide.md
.claude/skills/annotate/: SKILL.md
.claude/skills/auto-experiment/: SKILL.md
.claude/skills/auto-experiment/resources/: architecture-guide.md  experiment-checklist.md  guardrails-inventory.md  journal-schema.yaml
.claude/skills/benchmark/: SKILL.md
.claude/skills/compare-models/: SKILL.md
.claude/skills/cvat-deploy/: SKILL.md
.claude/skills/cvat-pull/: SKILL.md
.claude/skills/cvat-push/: SKILL.md
.claude/skills/explain-results/: SKILL.md
.claude/skills/monitor-training/: SKILL.md
.claude/skills/review-annotations/: SKILL.md
.claude/skills/review-dataset/: SKILL.md
.claude/skills/setup-project/: SKILL.md
.claude/skills/training-loop/: SKILL.md
.github/workflows/: test.yml
configs/architectures/: yolo11-p2.yaml  yolo11-p2p3p4.yaml  yolo11.yaml
configs/experiments/: augmentation.yaml  quick_scan.yaml  resolution.yaml
docs/plans/: 2026-03-19-skill-refactor-design.md
examples/fps_detection/: program.md  training-plan.md  yolo-project.yaml
examples/fps_detection/configs/: base_training.yaml  finetune_pubg.yaml
scripts/: draw_annotations.py  multi_pass_annotate.py  profile_dataset.py
src/yolocc/: __init__.py  __main__.py  doctor.py  paths.py  project.py
src/yolocc/cvat/: __init__.py  cli.py  client.py  nuclio.py  pull.py  push.py
src/yolocc/dataset/: __init__.py  autolabel.py  cleaner.py  merger.py  splitter.py  validator.py
src/yolocc/experiment/: __init__.py  runner.py  strategies.py  tracker.py
src/yolocc/export/: __init__.py  onnx.py
src/yolocc/training/: __init__.py  analyzer.py  trainer.py  utils.py
tests/: conftest.py  test_paths.py  test_project.py
tests/test_cvat/: test_client.py  test_nuclio.py  test_pull.py  test_push.py
tests/test_dataset/: test_autolabel.py  test_cleaner.py  test_merger.py  test_splitter.py  test_validator.py
tests/test_experiment/: test_architectures.py  test_runner.py  test_strategies.py  test_tracker.py
tests/test_export/: test_onnx.py
tests/test_integration/: test_experiment_flow.py  test_pipeline.py  test_smoke.py
tests/test_training/: test_analyzer.py  test_trainer.py  test_utils.py
